- Replace public final references in DbxClientV2 and DbxTeamClientV2 with accessor methods.
- Update longpoll example with better documentation on setting timeout values.

---------------------------------------------
2.0-beta-7 (2016-02-24)
- Updated to latest API specs.

---------------------------------------------
2.0-beta-6 (2016-02-22)
- Updated to latest API specs.
- Use getter methods instead of public final fields.
- Rename exception classes to be consistent with Java practices (e.g. end in "Exception").
- Move DbxException inner classes out into their own files.
- Expose Retry-After backoff for rate limiting exceptions.
- Add configuration setting for automatically retrying failed requests.
- Fix bug that hid certain routes containing union request arguments.
- Add new Java packages for v2 client.
- Break out v2 nested classes into their own files in the appropriate packages.
- Change format of builder methods.
  - Prepend 'with' to method names
- Change format of tagged union classes.
  - getTag() renamed to tag() to avoid naming conflicts
  - Tags without values now referenced as public static final singletons
  - Unions of value-less tags generated as enums
- Add builders for request and response classes.
- Fix deserialization bug with Union containing tags with optional values.
- Make read timeouts more easily configurable for StandardHttpRequestor.
- Add longpoll example.
- Separate integration tests from unit tests and enable unit tests by default.
- Fix android example bugs and linter warnings
  - Fix compilation error
  - Fix upload failure bug
  - Fix download failure bug
  - Update build dependencies
  - Stop using deprecated interfaces

---------------------------------------------
2.0-beta-5 (2016-01-22)
- Updated to latest API specs.
- Change format of tagged union classes.
  - Change getter method format from getAbc() to getAbcValue().
  - Add new isAbc() convenience methods.
  - Add new getTag() method for tag discrimination.